--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "strictNullChecks": false,
+    "noImplicitAny": true
   },
   "include": [
-    "src"
+    "src", "../helpers/src", "../helpers/auth-reducer.ts", "../helpers/auth.ts", "../helpers/test copy 2.tsx"
   ]
 }
