--- a/package.json
+++ b/package.json
@@ -14,18 +14,17 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.0.0",
     "axios": "^0.19.2",
-    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.20",
     "react-redux": "^7.2.0",
+    "react-responsive-modal": "^5.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.6",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "rm": "^0.1.8",
     "typescript": "^3.7.5",
     "uuid": "^8.1.0"
   },
@@ -49,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
