--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.0.0",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.20",
     "react-redux": "^7.2.0",
@@ -25,6 +27,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "typescript": "^3.7.5",
     "uuid": "^8.1.0"
   },
@@ -49,5 +52,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/socket.io-client": "^1.4.33"
+  }
 }
